fix navbar wrapping issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,7 @@ footer {
     
 .navbar {
     position: absolute;
+    width:95%;
 }
 
 .navbar-brand  {
